# photofeed

./: .gitignore  README.md  pyproject.toml
photofeed/: db.sqlite3
photofeed/app/: admin.py  forms.py  models.py  urls.py  views.py
photofeed/app/migrations/: 0001_initial.py
photofeed/app/templates/: gallery_with_upload.html
photofeed/photofeed/: asgi.py  settings.py  urls.py  wsgi.py
photoforum/: db.sqlite3  manage.py
photoforum/app/: admin.py  models.py  urls.py  views.py
photoforum/app/migrations/: 0001_initial.py  0002_image_author.py  0003_forum_user_image_feed_image_alter_image_author_and_more.py  0004_alter_image_feed_image.py
photoforum/photoforum/: asgi.py  settings.py  urls.py  wsgi.py
photoforum/templates/: index.html
